moved foundation init outside onload event as may cause flickering bug with chrome?

--- a/sass/prso_framework/_app-core.scss
+++ b/sass/prso_framework/_app-core.scss
@@ -40,6 +40,10 @@
 	bottom: 50px;
 }
 
+.slideshow-wrapper {
+	
+}
+
 /**** Gravity Forms - Adjust any gforms dom elements to meet foundation style */
 
 span.gform_description {
